--- a/index.html
+++ b/index.html
@@ -1,75 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <style>
-      :root {
-        --Slate-900: hsl(218, 44%, 22%);
-        --Slate-300: hsl(212, 45%, 89%);
-        --Slate-500: hsl(216, 15%, 48%);
-        --White: hsl(0, 0%, 100%);
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-      body {
-        background-color: var(--Slate-300);
-        display: flex;
-        height: 100vh;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet">
 
-      .attribution {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 320px;
-        height: 500px;
-        background-color: var(--White);
-        border-radius: 15px;
-      }
-      .qr-code {
-        background-image: url(./images/image-qr-code.png);
-        background-size: cover;
-        height: 60%;
-        width: 90%;
-        border-radius: 15px;
-        margin-top: 10px;
-      }
-      .text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      h3 {
-        text-align: center;
-      }
-      p {
-        text-align: center;
-      }
-    </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <style>
+    :root {
+      --Slate-900: hsl(218, 44%, 22%);
+      --Slate-300: hsl(212, 45%, 89%);
+      --Slate-500: hsl(216, 15%, 48%);
+      --White: hsl(0, 0%, 100%);
+    }
 
-    <title>Frontend Mentor | QR code component</title>
-  </head>
-  <body>
-    <div class="attribution">
-      <div class="qr-code"></div>
-      <div class="text">
-        <h3>Improve your front-end skills by building progects</h3>
-        <p>
-          scan the QR code to visist Frontend Master and take your coding skills
-          to the next level
-        </p>
-      </div>
+    body {
+      background-color: var(--Slate-300);
+      display: flex;
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: 'outfit' , sans-serif;
+    }
+
+    .attribution {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 320px;
+      height: 500px;
+      background-color: var(--White);
+      border-radius: 15px;
+    }
+
+    .qr-code {
+      background-image: url(./images/image-qr-code.png);
+      background-size: cover;
+      height: 60%;
+      width: 90%;
+      border-radius: 15px;
+      margin-top: 10px;
+    }
+
+    .text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 90%;
+    }
+
+    h3 {
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
+      font-size: 15px;
+    }
+  </style>
+
+  <title>Frontend Mentor | QR code component</title>
+</head>
+
+<body>
+  <div class="attribution">
+    <div class="qr-code"></div>
+    <div class="text">
+      <h3>Improve your front-end skills by building progects</h3>
+      <p>
+        scan the QR code to visist Frontend Master and take your coding skills
+        to the next level
+      </p>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
