--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
       text-align: center;
       font-size: 15px;
     }
+
+    @media only screen and (max-width: 375px) {
+      .attribution {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 250px;
+      height: 410px;
+      background-color: var(--White);
+      border-radius: 15px;
+    }
+
+}
+
   </style>
 
   <title>Frontend Mentor | QR code component</title>
