--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       --Slate-300: hsl(212, 45%, 89%);
       --Slate-500: hsl(216, 15%, 48%);
       --White: hsl(0, 0%, 100%);
+      margin: 0;
     }
 
     body {
@@ -28,7 +29,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-family: 'outfit' , sans-serif;
+      font-family: 'outfit', sans-serif;
     }
 
     .attribution {
@@ -64,37 +65,40 @@
     p {
       text-align: center;
       font-size: 15px;
+      color: gray;
     }
 
     @media only screen and (max-width: 375px) {
       .attribution {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 250px;
-      height: 410px;
-      background-color: var(--White);
-      border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 250px;
+        height: 410px;
+        background-color: var(--White);
+        border-radius: 15px;
+      }
+
     }
-
-}
-
   </style>
 
   <title>Frontend Mentor | QR code component</title>
 </head>
 
 <body>
-  <div class="attribution">
-    <div class="qr-code"></div>
-    <div class="text">
-      <h3>Improve your front-end skills by building progects</h3>
-      <p>
-        scan the QR code to visist Frontend Master and take your coding skills
-        to the next level
-      </p>
+  <main>
+    <div class="attribution">
+      <div class="qr-code"></div>
+      <div class="text">
+        <h3>Improve your front-end skills by building progects</h3>
+        <p>
+          scan the QR code to visist Frontend Master and take your coding skills
+          to the next level
+        </p>
+      </div>
     </div>
-  </div>
+  </main>
+
 </body>
 
 </html>
